Update .gitignore to exclude non-code files

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 Assets/*
 
 # But keep these specific folders
-!Assets/Scripts/
+!Assets/Floomp/Scripts
 
 # Exclude meta files for assets that are ignored
 Assets/*.meta
